Made Cmake platform independant (for Linux and Win development)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,14 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 2.8)
 
 project(ProTexasPlayer)
+
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/test)
 
 set(SOURCES src/hand.cpp
             src/deck.cpp
             src/range.cpp
             src/main.cpp)
-			
-add_executable(ProTexasPlayer ${SOURCES})
 
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/inc/)
+add_executable(${PROJECT_NAME} ${SOURCES})
+
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/inc)
