Created basic game view. Added game, board, croupier, player, strategy and statistics classes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,11 @@ add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/test)
 set(SOURCES src/hand.cpp
             src/deck.cpp
             src/range.cpp
+            src/game.cpp
+            src/player.cpp
+            src/croupier.cpp
+            src/strategy.cpp
+            src/playerStatistics.cpp
             src/main.cpp)
 
 add_executable(${PROJECT_NAME} ${SOURCES})
