Made deck implementation dependand and small refactor

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,8 +5,8 @@ project(ProTexasPlayerTest)
 set(SOURCES src/handtest.cpp
             src/decktest.cpp
             src/main.cpp
-            ../src/hand.cpp
-            ../src/deck.cpp)
+            ../src/Hand.cpp
+            ../src/deck/RealDeck.cpp)
 
 add_executable(ProTexasPlayerTest ${SOURCES})
 
