--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,4 +17,4 @@ set(SOURCES src/Hand.cpp
 
 add_executable(${PROJECT_NAME} ${SOURCES})
 
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/inc ../gtest)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/inc ${CMAKE_CURRENT_SOURCE_DIR}/lib/gtest ${CMAKE_CURRENT_SOURCE_DIR}/lib/spdlog)
