Refactor of Card and Hand classes. Moved mapping of Card to string to Card class to enable single card logging.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,8 @@ project(ProTexasPlayer)
 
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/test)
 
-set(SOURCES src/Hand.cpp
+set(SOURCES src/Card.cpp
+            src/Hand.cpp
             src/deck/RealDeck.cpp
             src/deck/AhkDeck.cpp
             src/Range.cpp
