--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,6 +6,7 @@ set(SOURCES src/handtest.cpp
             src/decktest.cpp
             src/gametest.cpp
             src/main.cpp
+            ../src/Card.cpp
             ../src/Hand.cpp
             ../src/deck/RealDeck.cpp
             ../src/game/Game.cpp
