--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,8 +5,10 @@ project(ProTexasPlayerTest)
 set(SOURCES src/handtest.cpp
             src/decktest.cpp
             src/gametest.cpp
+            src/cardconvertertest.cpp
             src/main.cpp
             ../src/Card.cpp
+            ../src/CardConverter.cpp
             ../src/Hand.cpp
             ../src/deck/RealDeck.cpp
             ../src/game/Game.cpp
