Added FileDeck unit tests

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,11 +6,13 @@ set(SOURCES src/handtest.cpp
             src/decktest.cpp
             src/gametest.cpp
             src/streamparsertest.cpp
+            src/filedecktest.cpp
             src/main.cpp
             ../src/Card.cpp
             ../src/Hand.cpp
             ../src/deck/RealDeck.cpp
             ../src/deck/StreamParser.cpp
+            ../src/deck/FileDeck.cpp
             ../src/game/Game.cpp
             ../src/Croupier.cpp
             ../src/Player.cpp)
