--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,8 @@ set(SOURCES src/Card.cpp
             src/game/Flop.cpp
             src/game/Turn.cpp
             src/game/River.cpp
+            src/game/RealGameFactory.cpp
+            src/game/GameSimulationFactory.cpp
             src/move/Move.cpp
             src/move/Fold.cpp
             src/move/Call.cpp
