Added gtest lib for Windows platform

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -36,7 +36,7 @@ add_executable(ProTexasPlayerTest ${SOURCES})
 if(UNIX)
     target_link_libraries(${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/../lib/gtest/libgtest.a pthread)
 else()
-    target_link_libraries(${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/../lib/gtest/libgtest.a)
+    target_link_libraries(${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/../lib/gtestWin/libgtest.a)
 endif()
 
 include_directories(../lib/gtest ../lib/spdlog ../inc ../lib/boost)
