--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -40,7 +40,12 @@ set(SOURCES src/handtest.cpp
             ../src/strategy/range/RangeCreator.cpp
             ../src/strategy/range/PositionalRange.cpp
             ../src/strategy/range/RangeBuilder.cpp
-            ../src/strategy/range/EpRangeBuilder.cpp)
+            ../src/strategy/range/EpRangeBuilder.cpp
+            ../src/strategy/range/MpRangeBuilder.cpp
+            ../src/strategy/range/CoRangeBuilder.cpp
+            ../src/strategy/range/BuRangeBuilder.cpp
+            ../src/strategy/range/SbRangeBuilder.cpp
+            ../src/strategy/range/BbRangeBuilder.cpp)
 
 add_executable(ProTexasPlayerTest ${SOURCES})
 
