--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 2.8)
 
 project(ProTexasPlayer)
 
+set(CMAKE_CXX_STANDARD 17)
+
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/test)
 
 set(SOURCES src/Card.cpp
